// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleBitbucketWebhook Should create channel, set topic and invite author and reviewers on PR opened 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [
    {
      "is_private": true,
      "name": "pr-test-proj-test-repository-1",
    },
  ],
  "invitesToChannels": [
    {
      "channel": "12345",
      "force": true,
      "users": "test.author@test.com,test.reviewer1@test.com",
    },
  ],
  "kicksFromChannels": [],
  "lookedUpUsers": [
    {
      "email": "test.author@test.com",
    },
    {
      "email": "test.reviewer1@test.com",
    },
  ],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#0288D1",
          "text": "Quite a long and comprehensive description to get channel title longer than 250 symbols which is a maximum length for the Slack",
          "title": "The pull request was opened by Test Author.",
        },
        {
          "color": "#0288D1",
          "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
        },
      ],
      "channel": "12345",
      "icon_emoji": ":bitbucket:",
    },
  ],
  "setChannelTopics": [
    {
      "channel": "12345",
      "topic": ":git: Pull request: Quite a long and comprehensive title to get channel title longer than 250 symbols which is a maximum length for the Slack | :git-branch: To branch: \`TEST-PROJ/test-repository:master\`",
    },
  ],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR declining 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#9E34EB",
          "text": "The pull request was declined by Test Author.",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR deletion 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#9E34EB",
          "text": "The pull request was deleted by Test Author.",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send completion message and close the channel on PR merge 1`] = `
{
  "archivedChannels": [
    {
      "channel": "12345",
    },
  ],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#4CAF50",
          "text": "The pull request was merged by Test Author. Well done, thank you all.",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR approval/unapproval/needs work 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#F6C342",
          "text": "Unapproved: Test Reviewer 1",
          "title": "Test Reviewer 1 requested changes for <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
    {
      "attachments": [
        {
          "color": "#F6C342",
          "text": "Unapproved: Test Reviewer 1",
          "title": "Test Reviewer 1 unapproved <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
    {
      "attachments": [
        {
          "color": "#4CAF50",
          "text": "Unapproved: Test Reviewer 1",
          "title": "Test Reviewer 1 approved <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>.",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR comment 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#F6C342",
          "text": "> Test comment",
          "title": "Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|commented>:",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR comment deletion 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#0288D1",
          "text": "> Test comment",
          "title": "Test Reviewer 1 deleted comment:",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR comment modification 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#9E34EB",
          "text": "> Updated comment text",
          "title": "Test Reviewer 1 <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview?commentId=1|edited comment>:",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR commit 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#F6C342",
          "text": "> Test comment for TEST-PROJ, test-repository, from-ref-commit-hash

Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>.",
          "title": "A <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/commits/from-ref-commit-hash|new commit> was added to the pull request by Test Author.",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should send message on PR modification 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "lookedUpUsers": [],
  "sentMessages": [
    {
      "attachments": [
        {
          "color": "#0288D1",
          "text": "Title is changed to:

> New pull request title

Description is changed to:

New pull request description

Target is changed to \`not-the-master\`

Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
          "title": "Test Author changed the pull request",
        },
      ],
      "channel": "pr-test-proj-test-repository-1",
      "icon_emoji": ":bitbucket:",
    },
  ],
  "setChannelTopics": [],
}
`;

exports[`handleBitbucketWebhook Should update channel participants on reviewers list update 1`] = `
{
  "archivedChannels": [],
  "createdChannels": [],
  "invitesToChannels": [
    {
      "channel": "12345",
      "force": true,
      "users": "test.reviewer2@test.com",
    },
  ],
  "kicksFromChannels": [
    {
      "channel": "12345",
      "user": "test.reviewer1@test.com",
    },
  ],
  "lookedUpUsers": [
    {
      "email": "test.reviewer2@test.com",
    },
    {
      "email": "test.reviewer1@test.com",
    },
  ],
  "sentMessages": [],
  "setChannelTopics": [],
}
`;
